=== master

* Make send_file in sinatra_helpers use a response body that implements to_path (jeremyevans) (#379)

* Escape newlines in common logger lines (jeremyevans)

=== 3.89.0 (2025-02-12)

* Support passing keyword arguments to mailer plugin mail/sendmail class methods (jeremyevans)

* Improve performance when using :assume_fixed_locals render plugin option, when using compiled methods and freezing the app (jeremyevans)

* Add part plugin, with a simpler (and better performing when using :assume_fixed_locals) method for rendering with locals (jeremyevans)

* Support :assume_fixed_locals render plugin option for better caching when all templates use fixed locals (jeremyevans)

=== 3.88.0 (2025-01-14)

* Support fixed locals in templates when using Tilt 2.6+ (jeremyevans)

* Make default_headers plugin correctly handle mixed/upper case content-type header on Rack 3 (jeremyevans) (#373)

* Make json_parser plugin handle case where Rack::Request#POST is called previously for env on Rack 3 (jeremyevans) (#372)

* Fix strict_unused_block warnings when running specs on Ruby 3.4 (jeremyevans)

= 3.87.0 (2024-12-17)

* Add host_routing plugin for routing based on request host header (jeremyevans)

* Do not write non-String to response body when using custom_block_results plugin (jeremyevans)

= 3.86.0 (2024-11-12)

* Add conditional_sessions plugin, for using the sessions plugin for only a subset of requests (jeremyevans)

* In permissions_policy plugin, add response.skip_permissions_policy! to avoid setting header (jeremyevans)

* Make Roda.freeze work if already frozen when using the autoload_{hash_branches,named_routes} plugins (jeremyevans)

* In content_security_policy plugin, add response.skip_content_security_policy! to avoid setting header (jeremyevans)

= 3.85.0 (2024-10-11)

* Avoid deprecation warning in public plugin when using Ruby 3.4.0-preview2 (jeremyevans)

* Evaluate class_matcher and symbol_matcher blocks in route-block context (jeremyevans)
